--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
+    <form class="js-form form">
+      <input type="text" placeholder="What is your name?" />
+    </form>
+    <!-- text에 글을 넣으면 form을 submit한다는걸 의미함 -->
+
+    <h4 class="js-greetings greetings"></h4>
     <script src="clock.js"></script>
+    <script src="greeting.js"></script>
   </body>
 </html>
