--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>something</title>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="index.css" />
   </head>
 
@@ -12,10 +13,13 @@
     <form class="js-form form">
       <input type="text" placeholder="What is your name?" />
     </form>
-    <!-- text에 글을 넣으면 form을 submit한다는걸 의미함 -->
-
     <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+      <input type="text" placeholder="Write a to do" />
+    </form>
+    <ul class="js-toDoList"></ul>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
+    <script src="toDo.js"></script>
   </body>
 </html>
