--- a/homework/index.html
+++ b/homework/index.html
@@ -5,16 +5,14 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="index.css" />
   </head>
-
   <body>
     <form class="toDoForm">
       <input type="text" placeholder="Add task" />
     </form>
-
-    <div class="pending">Pending</div>
-    <ul class="pending-list"></ul>
-    <div class="finished">Finished</div>
-    <ul class="finished-list"></ul>
-    <script src="index.js"></script>
+    <h1>Pending</h1>
+    <ul class="pendingList"></ul>
+    <h1>Finished</h1>
+    <ul class="finishedList"></ul>
+    <script src="toDoTwo.js"></script>
   </body>
 </html>
