--- a/cloneAgain/index.html
+++ b/cloneAgain/index.html
@@ -13,5 +13,6 @@
       <input type="text" placeholder="What is your name?" />
     </form>
     <script src="index.js"></script>
+    <script src="clock.js"></script>
   </body>
 </html>
